syntax = "proto3";

option java_package = "com.example.server.proto";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;
option java_outer_classname = "Greeter";
option java_generic_services = true;
option java_string_check_utf8 = false;

service GreeterService {
  rpc SayHello(HelloRequest) returns(GreeterReply);
}

message HelloRequest {
  string name = 1;
}

message GreeterReply {
  string msg = 2;
}
